# whisperspeech-streaming

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/WhisperSpeech/: Inference example.ipynb
src/WhisperSpeech/examples/: gui_file_to_text_to_audio_playback.py  gui_text_to_audio_playback.py  minimal.py  text_to_audio_playback.py  text_to_playback.py
src/WhisperSpeech/nbs/: 0. Download models.ipynb  1B. Voice activity detection.ipynb  1C. VAD merging.ipynb  2A. Speaker Embeddings.ipynb  2A. Whisper quantization dataset preparation.ipynb  2B. Whisper quantization (semantic token) model.ipynb  2C. Whisper quantization (semantic token) evaluation.ipynb  3A. T2S transcripts preparation.ipynb  3B. Semantic token extraction.ipynb  3B. Speech quality metrics extraction.ipynb  3C. S2A acoustic tokens preparation.ipynb  3D. Split out validation.ipynb  4B. Multi-language semantic to acoustic token modeling with conditioning.ipynb  4B. Multi-language semantic to acoustic token modeling.ipynb  5B. Multi-lang text to semantic token modeling.ipynb  6. Quality-boosting vocoder.ipynb  7. Pipeline.ipynb  B1. Training.ipynb  B2. Training (Lightning).ipynb  C. Benchmark.ipynb
src/WhisperSpeech/whisperspeech/: a2wav.py  benchmark.py  fetch_models.py  pipeline.py  s2a_delar_mup_wds_mlang.py  s2a_delar_mup_wds_mlang_cond.py  split_out_val_datasets.py  t2s_up_wds_mlang_enclm.py  train.py  train_multi.py  vad.py  vq_stoks.py
src/whisperspeech_streaming_server/: main.py
src/whisperspeech_streaming_server/utils/: utils.py
(+5 files in other folders)
