[tool.poetry]
name = "Whisper Speech Streaming"
version = "0.1.0"
description = ""
authors = ["Vardhaman <vardhamankalloli722@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Fixed dependencies
annotated-types = "0.7.0"
anyio = "4.4.0"
click = "8.1.7"
fastapi = "0.112.2"
fastprogress = "1.0.3"
filelock = "3.15.4"
fsspec = "2024.6.1"
h11 = "0.14.0"
idna = "3.8"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
mpmath = "1.3.0"
networkx = "3.3"
numpy = "2.1.0"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
pydantic_core = "2.20.1"
python-dotenv = "1.0.1"
setuptools = "74.0.0"
sniffio = "1.3.1"
starlette = "0.38.4"
sympy = "1.13.2"
torch = "2.4.0"
typing_extensions = "4.12.2"
uvicorn = "0.30.6"
vocos = "*"
speechbrain = "<1.0"
requests = "*"
huggingface_hub = "*"
fastcore = "*"
torchaudio = "*"
soundfile = "*"
vector_quantize_pytorch = "1.6.22"
openai-whisper = "*"
webdataset = "*"
wandb = "*"
whisper_normalizer = "*"
jiwer = "*"
matplotlib = "*"
pandas = "*"
pyarrow = "*"
scikit-learn = "*"
ipython = "*"

# Git dependencies
whisperx = {git = "https://github.com/m-bain/whisperx.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
